- progress on properties